add specific execution for CI

--- a/.github/workflows/python-checker.yml
+++ b/.github/workflows/python-checker.yml
@@ -2,8 +2,14 @@ name: Python Checker
 
 on: 
   push:
+    branches: 
+    - master
     paths:
     - 'QRCodeGenerator/**'
+  pull_request:
+    branches: 
+    - 'feature/**'
+    - master
 
 jobs:
   build:
