--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "greenpass-generator"]
 	path = extra/greenpass-generator
 	url = https://github.com/ps1dr3x/greenpass-generator/
+[submodule "qrcodejs"]
+	path = extra/qrcodejs
+	url = https://github.com/klonikar/qrcodejs
