--- a/QRCodeFuzzer/package.json
+++ b/QRCodeFuzzer/package.json
@@ -4,12 +4,15 @@
   "description": "### Requirements",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "webdriverio": "^7.16.12"
+  },
+  "devDependencies": {
+    "mocha": "^9.1.3"
   }
 }
