removed pkg.json file, fix docker-compose and CI

--- a/.github/workflows/python-checker.yml
+++ b/.github/workflows/python-checker.yml
@@ -5,7 +5,7 @@ on:
     branches: 
     - master
     paths:
-    - 'QRCodeGenerator/**'
+    - 'FakeGreenPassGenerator/**'
   pull_request:
     branches: 
     - 'feature/**'
