--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
 version: '3.1'
 
 services:
-  qrcodegen:
-    container_name: QRCodeGen
-    build: ./QRCodeGenerator
-    volumes:
-      - "./QRCodeGenerator:/app"
   gpgen:
     container_name: FakeGreenPassGenerator
     build: ./FakeGreenPassGenerator
     volumes:
       - "./FakeGreenPassGenerator:/app"
+  # qrcodegen:
+  #   container_name: QRCodeGen
+  #   build: ./QRCodeGenerator
+  #   volumes:
+  #     - "./QRCodeGenerator:/app"
 
